# simple-excel-etl

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
app/: main.py
app/pipe/: extract.py  load.py  transform.py
data/output/: output.xlsx
docs/: getting-started.md  index.md
getting-started/: index.html
search/: search_index.json
tests/: test_transform.py
