[tool.poetry]
name = "simple-excel-etl"
version = "0.1.0"
description = ""
authors = ["Philip Martins <philip.martt@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
pytest = "^8.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
