[tool.poetry]
name = "simple-excel-etl"
version = "0.1.0"
description = ""
authors = ["Philip Martins <philip.martt@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
pytest = "^8.2.0"
isort = "^5.13.2"
blue = "^0.9.1"
pydocstyle = "^6.3.0"
pip-audit = "^2.7.3"
taskipy = "^1.12.2"
mkdocs = "^1.6.0"
mkdocstrings-python = "^1.10.0"
pygments = "^2.18.0"
mkdocs-material = "^9.5.22"
pymdown-extensions = "^10.8.1"
mkdocs-bootstrap386 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"